@@ -1,0 +1,8 @@
+# This tests for a bug where installing a sequence dirs and subdirs
+# outside the source tree can cause SCons to fail to create the dest
+# dir.
+import os, os.path, shutil
+env=Environment()
+dst='../build'
+env.Install(os.path.join(dst,'__foo/bar/baz'), 'a')
+env.Install(os.path.join(dst,'__foo/bar/baz/a/b'), 'x/y')
